[package]
name = "boot"
version = "0.1.0"
authors = ["Niall Coates <niall.coates@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
futures = "0.3.15"
tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = "0.1.6"
failure = "0.1.8"
linkify = "0.7.0"
webpage = "1.3.0"
