[package]
name = "boot"
version = "0.1.0"
authors = ["Niall Coates <1349685+Niall-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
futures = "0.3.15"
tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = "0.1.6"
failure = "0.1.8"
linkify = "0.7.0"
webpage = "1.3.0"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
rusqlite = "0.25.3"
serde = "1.0.126"
toml = "0.5.8"
urlencoding = "2.1.0"
serde_json = "1.0.64"
