[package]
name = "boot"
version = "0.1.0"
authors = ["Niall Coates <1349685+Niall-@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"

futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"

linkify = "0.8.0"
webpage = "1.4.0"
reqwest = { version = "0.11.10", features = ["stream"] }
bytes = "1.1.0"
kuchiki = "0.8.1"

failure = "0.1.8"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
rusqlite = "0.27.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5.8"
rand = "0.8.5"
urlencoding = "2.1.0"
openweathermap = "0.2.4"
time = { version = "0.3.30", features = [] }
